---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: ???
  Changes:
    - Forked Circuit Processing
    - Updated to 1.1
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 18. 8. 2020
  Changes:
    - Fix module technology icons
    - Redundant normal/expensive recipe handling
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 6. 7. 2020
  Changes:
    - Fix module_slot sprite count
    - Check graphics_set.module_visualisation exists
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 5. 7. 2020
  Changes:
    - Modules display correct level when attached to beacons
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 30. 5. 2020
  Changes:
    - Update for new base game high resolution icons
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 1. 3. 2020
  Changes:
    - Enable chrome plates if Angel's smelting is present
    - Adjust module tech prerequisites for Angel's bioprocessing changes
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 25. 1. 2020
  Changes:
    - Factorio 0.18 update
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 8. 9. 2019
  Changes:
    - Support running without bobplates
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 3. 3. 2019
  Changes:
    - Factorio 0.17 update
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 11. 6. 2018
  Changes: